--- a/settings.ini
+++ b/settings.ini
@@ -12,7 +12,7 @@ black_formatting = False
 
 ### nbdev ###
 doc_path = _docs
-lib_path = lib_unused
+lib_path = _libs
 nbs_path = nbs
 recursive = True
 tst_flags = notest
@@ -39,5 +39,5 @@ user = mudiarto
 
 ### Optional ###
 # requirements = fastcore pandas
-# dev_requirements = 
+# dev_requirements =
 # console_scripts =
