--- a/settings.ini
+++ b/settings.ini
@@ -4,7 +4,7 @@
 
 ### Python library ###
 repo = mudiarto.github.io
-lib_name = mudiarto_github_io_unused
+lib_name = _mudiarto_github_io
 version = 0.0.1
 min_python = 3.7
 license = mit
@@ -24,14 +24,14 @@ custom_sidebar = False
 doc_host = https://%(user)s.github.io
 doc_baseurl = /%(repo)s
 git_url = https://github.com/%(user)s/%(repo)s
-title = Kusno Mudiarto's Blog
+title = @mudiarto's notebooks
 
 ### PyPI ###
 audience = Developers
 author = Kusno Mudiarto
 author_email = kusno@mudiarto.com
 copyright = 2024 onwards, %(author)s
-description = Kusno Mudiarto's Blog
+description = Kusno Mudiarto's Notebooks
 keywords = kusno mudiarto programmer nbdev jupyter notebook python
 language = English
 status = 3
